Added a update inventory function for the order controller so that historical orders can be added
